tests/cases/fail/import_module_no_bare_class_access.p4
import import_module_no_bare_class_access_models

def main() -> None:
    p: Point = Point(1, 2)
    print(p)
